--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Resume</title>
+     <link rel="stylesheet" href="./style.css" />
 </head>
 <body>
     <h1>JMDOCDOC</h1>
     
     <hr/>
-    <img src="./assets/images/mrbean.webp" alt="My Picture" height="200"/>
+    <img class="mypic" src="./assets/images/mrbean.webp" alt="My Picture" height="200"/>
     <h2>Summary</h2>
     <hr/>
     <p>Results-driven IT Professional with over 9 years of experience in delivering robust technical solutions and ensuring optimal system performance.
