--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>My Resume</title>
      <link rel="stylesheet" href="./style.css" />
 </head>
-<body>
+<body draggable="false">
     <h1>JMDOCDOC</h1>
     
     <hr/>
