--- a/index.html
+++ b/index.html
@@ -9,31 +9,35 @@
 <body draggable="false">
     <h1>JMDOCDOC</h1>
     
-    <hr/>
+   
+    <div class="picsummary">
     <img class="mypic" src="./assets/images/mrbean.webp" alt="My Picture" height="200"/>
     <h2>Summary</h2>
     <hr/>
     <p>Results-driven IT Professional with over 9 years of experience in delivering robust technical solutions and ensuring optimal system performance.
         Proven expertise in software development, system administration, network infrastructure, IT support, with strong analytical and problem-solving skills.
         Adept at managing projects, troubleshooting complex technical issues, and implementing security best practices. Highly adaptable, with a continuous learning mindset and a passion for leveraging technology to drive business success.</p>
-    <h2>Education</h2>
-    <hr/>
-    <ul>
-        <li><h3>College</h3></li>
-            <ul>
-                <li><b>Bachelor of Science in Information Tecehnology</b><br/>University of Eastern Philippines<br/>Catarman, Northern Samar, Philippines</li>
-                <br/>
-                <li><b>Bachelor of Arts Philosophy</b> (Undergraduate)<br/>St. Vincent de Paul College Seminary<br>Calbayog City, Philippines</li>
-            </ul>
-        <li><h3>High School</h3></li>
-            <ul>
-                <li>Northern Samar Colleges<br/>Catarman, Northern Samar, Philippines</li>
-            </ul>
-        <li><h3>Elementary</h3></li>
-            <ul>
-                <li>Catarman I Elementary School<br/>Catarman, Northern Samar, Philippines</li>
-            </ul>
-    </ul>
+    </div>
+    <div class="education"><h2 >Education</h2>
+        <hr/>
+        <ul>
+            <li><h3>College</h3></li>
+                <ul>
+                    <li><b>Bachelor of Science in Information Tecehnology</b><br/>University of Eastern Philippines<br/>Catarman, Northern Samar, Philippines</li>
+                    <br/>
+                    <li><b>Bachelor of Arts Philosophy</b> (Undergraduate)<br/>St. Vincent de Paul College Seminary<br>Calbayog City, Philippines</li>
+                </ul>
+            <li><h3>High School</h3></li>
+                <ul>
+                    <li>Northern Samar Colleges<br/>Catarman, Northern Samar, Philippines</li>
+                </ul>
+            <li><h3>Elementary</h3></li>
+                <ul>
+                    <li>Catarman I Elementary School<br/>Catarman, Northern Samar, Philippines</li>
+                </ul>
+        </ul>
+    </div>
+    
     <h2>Work Experience</h2>
     <hr/>
     <ul>
