--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>JMDOCDOC</h1>
     
    
-    <div class="picsummary">
+    <div>
     <img class="mypic" src="./assets/images/mrbean.webp" alt="My Picture" height="200"/>
     <h2>Summary</h2>
     <hr/>
